[#50591877] fix bug for dino which was not visible in all cases

--- a/ZONE-watcher/public/404.html
+++ b/ZONE-watcher/public/404.html
@@ -82,7 +82,7 @@
 
             <div class="row" xmlns="http://www.w3.org/1999/html">
                 <div class="span2"></div>
-                <div id="dino-logo" class="span3"><img src="assets/dino.png" class="dead"/></div>
+                <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
                 <div class="span5 ">
                     <h1 class="triangle-border left"  id="reador-title"><u>404: Page not found</u><br/><br/> sorry boy!</h1>
 
