--- a/ZONE-watcher/public/500.html
+++ b/ZONE-watcher/public/500.html
@@ -72,6 +72,14 @@
         border-width:9px 21px 9px 0;
         border-color:transparent #fff;
     }
+    .error-text{
+        -webkit-transform: rotate(-180deg);
+        -moz-transform: rotate(-180deg);
+        text-align: right;
+    }
+    .underline{
+        border-bottom: dotted 3px #000000;
+    }
 </style>
 
 
@@ -84,7 +92,7 @@
                 <div class="span2"></div>
                 <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
                 <div class="span5 ">
-                    <h1 class="triangle-border left"  id="reador-title"><u>glooooops</u><br/><br/> something went wrong!</h1>
+                    <h1 class="triangle-border left"  id="reador-title"><i class="underline">glooooops</i><br/><br/> <div class="error-text">something went wrong!</div></h1>
 
                 </div>
                 <div class="span2"></div>
