--- a/ZONE-watcher/public/500.html
+++ b/ZONE-watcher/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Reador - page not found</title>
+    <title>Reador - Something went wrong!</title>
 
     <link href="/bootstrap/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/bootstrap/css/bootstrap-responsive.css" media="screen" rel="stylesheet" type="text/css" />
