add a back button on error pages

--- a/ZONE-watcher/public/404.html
+++ b/ZONE-watcher/public/404.html
@@ -92,7 +92,11 @@
                 <div class="span2"></div>
                 <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
                 <div class="span5 ">
-                    <h1 class="triangle-border left"  id="reador-title"><i class="underline">404: Page not found</i><div ><br/><br/><div class="error-text"> sorry boy!</div></h1>
+                    <h1 class="triangle-border left"  id="reador-title"><i class="underline">404: Page not found</i><div ><br/><br/><div class="error-text"> sorry boy!</div>
+                        <script>
+                            document.write('<a href="' + document.referrer + '">Go Back</a>');
+                        </script>
+                    </h1>
 
                 </div>
                 <div class="span2"></div>
