--- a/ZONE-watcher/public/422.html
+++ b/ZONE-watcher/public/422.html
@@ -84,7 +84,11 @@
                 <div class="span2"></div>
                 <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
                 <div class="span5 ">
-                    <h1 class="triangle-border left"  id="reador-title"><u>The change you wanted was rejected.</u><br/><br/>Maybe you tried to change something you didn't have access to.</h1>
+                    <h1 class="triangle-border left"  id="reador-title"><u>The change you wanted was rejected.</u><br/><br/>Maybe you tried to change something you didn't have access to.
+                        <script>
+                            document.write('<a href="' + document.referrer + '">Go Back</a>');
+                        </script>
+                    </h1>
 
                 </div>
                 <div class="span2"></div>
