--- a/ZONE-watcher/public/500.html
+++ b/ZONE-watcher/public/500.html
@@ -92,7 +92,14 @@
                 <div class="span2"></div>
                 <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
                 <div class="span5 ">
-                    <h1 class="triangle-border left"  id="reador-title"><i class="underline">glooooops</i><br/><br/> <div class="error-text">something went wrong!</div></h1>
+                    <h1 class="triangle-border left"  id="reador-title">
+                        <i class="underline">glooooops</i>
+                        <br/><br/>
+                        <div class="error-text">something went wrong!</div>
+                        <script>
+                            document.write('<a href="' + document.referrer + '">Go Back</a>');
+                        </script>
+                    </h1>
 
                 </div>
                 <div class="span2"></div>
