--- a/ZONE-watcher/public/404.html
+++ b/ZONE-watcher/public/404.html
@@ -94,7 +94,11 @@
                 <div class="span5 ">
                     <h1 class="triangle-border left"  id="reador-title"><i class="underline">404: Page not found</i><div ><br/><br/><div class="error-text"> sorry boy!</div>
                         <script>
-                            document.write('<a href="' + document.referrer + '">Go Back</a>');
+                            var back = document.referrer
+                            if(back == ""){
+                              back = "/"
+                            }
+                            document.write('<a href="' + back + '">Go Back</a>');
                         </script>
                     </h1>
 
