--- a/ZONE-watcher/public/500.html
+++ b/ZONE-watcher/public/500.html
@@ -97,7 +97,11 @@
                         <br/><br/>
                         <div class="error-text">something went wrong!</div>
                         <script>
-                            document.write('<a href="' + document.referrer + '">Go Back</a>');
+                            var back = document.referrer
+                            if(back == ""){
+                                back = "/"
+                            }
+                            document.write('<a href="' + back + '">Go Back</a>');
                         </script>
                     </h1>
 
