--- a/ZONE-watcher/public/500.html
+++ b/ZONE-watcher/public/500.html
@@ -88,7 +88,7 @@
 
         <div class="search clear-top">
 
-            <div class="row" xmlns="http://www.w3.org/1999/html">
+            <div class="row">
                 <div class="span2"></div>
                 <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
                 <div class="span5 ">
